# camerastream

./: README.md
include/: camerastream.h  videostream.h
src/: camerastream.cpp  videostream.cpp
test/: CMakeLists.txt  test.cpp
